--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
 Hey,My name is Abdul Rehman Ansari
+(cd) stands for change directory
+cd .. will help get back you to parent directory
+ls hep you to list down the contain of the directory
+git clone <url of the git repo>helps you to localise you remote repo
+git status hepl you to get the status of your repo
+
