--- a/index.html
+++ b/index.html
@@ -4,4 +4,4 @@ cd .. will help get back you to parent directory
 ls hep you to list down the contain of the directory
 git clone <url of the git repo>helps you to localise you remote repo
 git status hepl you to get the status of your repo
-
+(-m) stands for  message
