--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 Hey,My name is Abdul Rehman Ansari
-(cd) stands for change directory
-(cd ..) will help get back you to parent directory
-(ls) help you to list down the contain of the directory
-(git clone) <url of the git repo>helps you to localise you remote repo
-(git status) help you to get the status of your repo
-(-m) stands for  message
+(cd) stands for change directory.
+(cd ..) will help get back you to parent directory.
+(ls) help you to list down the contain of the directory.
+(git clone) <url of the git repo>helps you to localise you remote repo.
+(git status) help you to get the status of your repo.
+(-m) stands for  message.
