--- a/index.html
+++ b/index.html
@@ -1,7 +1,19 @@
-Hey,My name is Abdul Rehman Ansari
-(cd) stands for change directory.
-(cd ..) will help get back you to parent directory.
-(ls) help you to list down the contain of the directory.
-(git clone) <url of the git repo>helps you to localise you remote repo.
-(git status) help you to get the status of your repo.
-(-m) stands for  message.
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>1st Landing page</title>
+</head>
+<body>
+ 
+    <h1>Heading 1</h1>
+    <h2>Heading 2</h2>
+    <h3>Heading 3</h3>
+    <h4>Heading 4</h4>
+    <h5>Heading 5</h5>
+    <h6>Heading 6</h6>
+    
+</body>
+</html>
