--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
     <h1 class="red"> red </h1>
     <h2 class="blue"> blue </h2>
-    <h3 class="green">green </h3>
-    <h4>Heading</h4>
-    <h5>Heading</h5>
+    <h3 class="green"> green </h3>
+    <h4 class="purple"> purple </h4>
+    <h5 class="yellow"> yellow </h5>
     <h6>Heading</h6><b></b>
 
     <p class="para">Lorem ipsum <b>dolor</b> <i>sit</i>amet, consectetur adipiscing elit. <br>Donec sit amet metus
@@ -48,12 +48,12 @@
         <tr>
             <th> sr no.</th>
             <th>Student Name</th>
-            <th>Student Name</th>
+            <th>Roll no</th>
         </tr>
 
         <tr>
             <td>1</td>
-            <td>Faraaz</td>
+            <td>Abdul rehman Ansari</td>
             <td>80</td>
         </tr>
 
@@ -113,7 +113,7 @@
             </p></b>
 
             <video height="315" width="560" controls>
-                <source src"video/car_racing_-_74(360).mp4" type="video/mp4" 
+                <source src="Video/car_racing_-_74 (360p).mp4" type="video/mp4" autoplay 
             </video>
 
         </section><br><br><br><br><br>
